--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ heading: Illia Ilin
 content: A creative DevOps engineer
 copyright:  
   year: © 2023
-  msg: Contents under CC-BY-NC 
+  msg: Illia Ilin, A creative DevOps engineer
 
 # Set title and content for private & broken link tooltop
 privatelinks:
