--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,12 @@ heading: Illia Ilin
 content: A creative DevOps engineer
 copyright:  
   year: © 2023
-  msg: Illia Ilin, A creative DevOps engineer
+  msg: Contents under CC-BY-NC • Illia Ilin, A creative DevOps engineer
+
+# Custom fields, used on site
+me:
+  name: Illia Ilin
+  position: A creative DevOps engineer
 
 # Set title and content for private & broken link tooltop
 privatelinks:
