Fixed the crash of the build

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ copyright:
   year: © 2023
   msg: Contents under CC-BY-NC • Illia Ilin, A creative DevOps engineer
 
-# Custom fields, used on site
+# Custom fields, used on the site
 me:
   name: Illia Ilin
   position: A creative DevOps engineer
