--- a/_config.yml
+++ b/_config.yml
@@ -28,15 +28,15 @@ baseurl: ""
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
 heading: Illia Ilin 
-content: A creative DevOps engineer
+content: DevOps Discoverer. Unearthing the Synergy of Technology, Creativity & Human Connection
 copyright:  
   year: © 2023
-  msg: Contents under CC-BY-NC • Illia Ilin, A creative DevOps engineer
+  msg: Contents under CC-BY-NC • Illia Ilin, DevOps Discoverer. Unearthing the Synergy of Technology, Creativity & Human Connection
 
 # Custom fields, used on the site
 me:
   name: Illia Ilin
-  position: A creative DevOps engineer
+  position: DevOps Discoverer. Unearthing the Synergy of Technology, Creativity & Human Connection
 
 # Set title and content for private & broken link tooltop
 privatelinks:
